# bootcamp

./: .gitignore  README.md  pyproject.toml
Day 0/: README.md  pyproject.toml  setup.py
Day0/: README.md  daily_log.txt  demo.cast  main.py  pyproject.toml  setup.py
Day0/src/rishabh_hello/: cli.py  hello.py
Day1/doctools/: mkdocs.yml
Day2/Section 2/: LBTY_pitfall.py  attribute_access_EAFP.py  custom_object.py  file_handing_EAFP.py
Day2/Section 4/: 1.py  2.py  6.py  8.py
Day2/Section 5/: 1.py  4.py  8.py
Day2/Section 7/5/: 5-7.py  data.csv  pyproject.toml  setup.py  test.py
Day2/Section 7/5/mypkg/: __init__.py  cli.py
dataflow-framework/: FINAL.md
dataflow-framework/abstraction-level-0/: README.md  process.py  text.txt
dataflow-framework/abstraction-level-1/: README.md  output_text_snakecase.txt  output_text_uppercase.txt  process.py  text.txt
dataflow-framework/abstraction-level-2/: README.md  cli.py  core.py  main.py  pipeline.py  text.txt  text_snakecase.txt  text_uppercase.txt
dataflow-framework/abstraction-level-3/: README.md  cli.py  core.py  main.py  pipeline.py  pipeline_text.txt
dataflow-framework/abstraction-level-4/: README.md  core.py  custom_types.py  main.py  pipeline.py  pipeline.yaml  pipeline2.yaml  pipeline2_output.txt  pipeline3.yaml  pipeline3_output.txt  pipeline4.yaml  pipeline4_output.txt  pipeline_output.txt  text.txt
dataflow-framework/abstraction-level-5/: README.md  cli.py  custom_types.py  dag.py  dag_pipeline.yaml  main.py  pipeline.py
dataflow-framework/abstraction-level-6/: README.md  cli.py  config.yaml  router.py
dataflow-framework/abstraction-level-7/: README.md  cli.py  dashboard.py  main.py
dataflow-framework/abstraction-level-8/: README.md  dashboard.py  file_monitor.py  file_processor.py  main.py
dataflow-framework/file-processing-system/: Dockerfile  Makefile  README.md  cli.py  dashboard.py  main.py  requirements.txt
figure-caption-extrac/: README.md  requirements.txt
figure-caption-extraction/: .gitignore  Makefile  README.md  requirements.txt  test.ipynb  tests.py
figure-caption-extraction/data/: papers.duckdb
figure-caption-extractions/: Dockerfile  main.py
figure-caption-extractions/data/: papers.duckdb
html/: README.md  index.html
persistence-drills/Persistence using File and DB/: 1.py  10.py  11.py  12.py  2.py  (+15 more)
(+331 files in other folders)
