[project]
name = "figure-caption-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "RishabhSpark",email = "rishabh1000khandelwal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all] (>=0.15.4,<0.16.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "coverage (>=7.8.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ipykernel = "^6.29.5"

