[project]
name = "rishabh-hello"
version = "1.1.3"
description = "Say hello"
authors = [{ name = "RishabhSpark", email = "rishabh1000khandelwal@gmail.com" }]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.11"
dependencies = [
    "rich",
    "typer[all]"
]

[project.scripts]
rishabh-hello = "rishabh_hello.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"